

syntax = "proto3";

package grpcdemo;

// The greeting service definition.
service AddDemo {
  
  rpc AddNumber (AddRequest) returns (AddReply) {}
  rpc SubtractNumber (.grpcdemo.SubstactRequst) returns (.grpcdemo.AddReply) {}
}


message AddRequest {
  int32 firstNumber = 1;
  int32 secondNumber = 2;
}

message AddReply {
  int32 total = 1;
  }


 message SubstactRequst{
 	int32 firstNumber = 1;
	int32 lastNumber = 2;
 }